syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;


/*
    ExchSecurityDefinition (internal only) records exist per grouping of a given security when the Ticker Symbol is not the primary identifier for a security (eg - European ISIN identified securities)
*/    
message ExchSecurityDefinition {
    message PKey {
        
        TickerKey exchange_ticker = 10;
        StkExch exchange = 11;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    Currency primary_currency = 100; // Currency that this ticker trades in
    string isin = 103; // ISIN code
    TickerKey primary_ticker = 106; // TickerKey that identifies the TickerDefinition for the primary listing for the security
}


