syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    TickerDefinition (internal only) records exist for all SpiderRock tickers including equity tickers (stocks and ETFs) as well as index tickers and synthetic tickers for future chains and option multihedge baskets.
*/    
message TickerDefinition {
    message PKey {
        
        TickerKey ticker = 10;
    }

    message Exchange {
        
        StkExch stk_exch = 261;
        TickerKey ticker = 262;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    int32 security_iD = 100; // Security ID number from the source - Vendor, SR, Feed
    SymbolType symbol_type = 103;
    string name = 106; // Symbol name
    string country = 109; // ISO Issuer Country Code
    Currency primary_currency = 254;
    RateSource rate_source = 264;
    float par_value = 112; // Security Parvalue
    string par_value_currency = 115; // Security Parvalue currency
    float point_value = 118;
    Currency point_currency = 121;
    PriceFormat price_format = 268; // PriceFormat: ex: NMS_Penny, NMS_HalfPenny
    float min_tick_size = 269;
    PrimaryExchange primary_exch = 124;
    int32 alt_iD = 127; // Alt Security ID number
    string mic = 130; // ISO Market Identification Code
    string mic_seg = 133; // ISO Market Indentification Segment Code
    string symbol = 136; // trading symbol (w/o dot notation)
    string issue_class = 139; // issue class of stock symbol.  if no issue class field will be blank.
    int64 shares_outstanding = 256; // symbol shares outstanding, represented in thousands (actualsharesoutstanding = sharesoutstanding * 1000)
    string cusip = 145; // cusip code
    int32 ind_num = 148; // IND (2 digits)
    int32 sub_num = 151; // SUB (4 digits)
    int32 grp_num = 154; // GRP (6 digits)
    int32 nbr_num = 157; // NBR (8 digits)
    string sic = 160; // SIC (Standard Industrial Classification) code
    string cik = 163; // Central Index Key (US specific)
    string gics = 166; // Global Industry Classification Standard
    string lei = 169; // Legal Entity Identifier
    string naics = 172; // North American Industry Classification System
    string cfi = 175; // ISO Classification of Financial Instruments
    string cic = 178; // Complementay Identification Code
    string fisn = 181; // Financial Instrument Short Name
    string isin = 184; // ISIN code
    string figi = 187; // FIGI code
    string bbg_composite_ticker = 190; // Bloomberg Composite Ticker
    string bbg_exchange_ticker = 193; // Bloomberg Exchange Ticker
    string bbg_composite_global_iD = 196; // Bloomberg Composite Global ID
    string bbg_global_iD = 199; // Bloomberg Global ID
    string bbg_currency = 202; // Bloomberg Trading Currency
    int32 roundlot = 265; // round lot
    OTCPrimaryMarket otc_primary_market = 205;
    OTCTier otc_tier = 208;
    string otc_reporting_status = 211;
    int32 otc_disclosure_status = 214;
    int32 otc_flags = 217;
    FlexTypeFlag flex_type_flag = 267;
    TkDefSource tk_def_source = 223; // Ticker definition source: None; Vendor; OTC; SR; Exchange
    TkStatusFlag status_flag = 226;
    TapeCode tape_code = 229; // SIP Tape Code
    float stk_volume = 232; // daily stock volume
    float fut_volume = 235; // daily future volume
    float opt_volume = 238; // daily option volume
    string exch_string = 241; // exchanges listing any options on this underlying
    YesNo has_options = 244; // Has Options flag
    int32 num_options = 247; // total number of listed options
    TickerKey basis_key = 257; // skew basis fn key
    YesNo reverse_skew = 258; // if Yes/No, force skew curve norma/reverse (left/right) orientation,  if None, auto-determine from data
    TimeMetric time_metric = 250; // trading time metric - 252 or 365 trading days or a weekly cycle type
    TradingPeriod trading_period = 259; // trading period code (defines 24-hour trading period start/stop)
    TickerKey regional_composite_ticker = 263; // regional composite ticker - set on European contributor products only
    google.protobuf.Timestamp timestamp = 253;
    string default_root = 266; // Default Root selected for Index Options
    repeated Exchange exchange = 260;
}


